feat: check gateway-debug plugin before making a `try-it`